force-app/main/default/objects/Adoption_Details__c/Adoption_Details__c.object-meta.xml
<CustomObject>
    <label>Adoption</label>
    <nameField>
        <label>Adoption Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adoptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>