force-app/main/default/objects/Adoption_Details__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adopted Business/Shutfut/Kehilla</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please make sure to select a Business</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Adoptions</relationshipLabel>
    <relationshipName>Adoptions1</relationshipName>
    <type>Lookup</type>
</CustomField>