force-app/main/default/objects/Adoption_Details__c/fields/Communtity__c.field-meta.xml
<CustomField>
    <fullName>Communtity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Communtity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please make sure to select a Community</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Communities</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Adoptions</relationshipLabel>
    <relationshipName>Adoptions</relationshipName>
    <type>Lookup</type>
</CustomField>