force-app/main/default/objects/Adoption_Details__c/fields/JFNA_KH__c.field-meta.xml
<CustomField>
    <fullName>JFNA_KH__c</fullName>
    <label>JFNA/KH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JFNA</fullName>
            </value>
            <value>
                <fullName>KH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>