force-app/main/default/objects/Adoption_Details__c/fields/MOU_Signed__c.field-meta.xml
<CustomField>
    <fullName>MOU_Signed__c</fullName>
    <label>MOU Signed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>