force-app/main/default/objects/Adoption_Details__c/fields/P2G__c.field-meta.xml
<CustomField>
    <fullName>P2G__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P2G</label>
    <type>Checkbox</type>
</CustomField>