force-app/main/default/objects/Adoption_Details__c/fields/Partnership_Id_from_P2G__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Id_from_P2G__c</fullName>
    <label>Partnership Id from P2G</label>
    <length>20</length>
    <type>Text</type>
</CustomField>