force-app/main/default/objects/Adoption_Details__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First interest</fullName>
            </value>
            <value>
                <fullName>Exists</fullName>
            </value>
            <value>
                <fullName>In matching process</fullName>
            </value>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
            <value>
                <fullName>Existing Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>