force-app/main/default/objects/Adoption_Details__c/validationRules/Community_or_Kehilla_must_be_filled_in.validationRule-meta.xml
<ValidationRule>
    <fullName>Community_or_Kehilla_must_be_filled_in</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Communtity__c),
ISBLANK(Business__c))</errorConditionFormula>
    <errorMessage>חייב לבחור קהילה או שותפות\עסק</errorMessage>
</ValidationRule>