force-app/main/default/objects/Adoption_Details__c/listViews/Corporate.listView-meta.xml
<ListView>
    <fullName>Corporate</fullName>
    <columns>NAME</columns>
    <columns>Communtity__c</columns>
    <columns>Business__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Corporate</value>
    </filters>
    <label>Corporate</label>
    <sharedTo>
        <group>War</group>
    </sharedTo>
</ListView>