force-app/main/default/objects/Adoption_Details__c/listViews/Partnership.listView-meta.xml
<ListView>
    <fullName>Partnership</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Communtity__c</columns>
    <columns>Business__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Adoption_Details__c.Partnership</value>
    </filters>
    <label>Partnership</label>
    <sharedTo>
        <group>War_Control_Center</group>
    </sharedTo>
</ListView>